--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,72 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* CONTAINER */
+.container{
+    width: 80%;
+    height: 100vh;
+    margin: 0 auto;
+    overflow: hidden;
+
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+/* Header container */
+.header-container{
+    width: 100%;
+    height: 10vh;
+    padding: 0 .5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#btn-play{
+    font-size: .8rem;
+    padding: .2em 1em;
+}
+
+/* Main container */
+.main-container{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: aqua;
+}
+
+.grid{
+    width: 450px;
+    height: 450px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.square{
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.square.active{
+    background-color: aquamarine;
+}
+
+/* Footer container */
+.footer-container{
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+}
+
+
+
