--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@
 }
 
 .grid{
-    width: 450px;
-    height: 450px;
+    width: 550px;
+    height: 550px;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
@@ -57,6 +57,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 .square.active{
