--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@
     padding: .2em 1em;
 }
 
+select{
+    font-size: .8rem;
+    padding: .2em 1em;
+}
+
 /* Main container */
 .main-container{
     width: 100%;
@@ -51,13 +56,26 @@
 }
 
 .square{
-    width: calc(100% / 10);
-    height: calc(100% / 10);
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
     cursor: pointer;
+}
+
+.square.easy{
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+}
+
+.square.medium{
+    width: calc(100% / 9);
+    height: calc(100% / 9);
+}
+
+.square.hard{
+    width: calc(100% / 7);
+    height: calc(100% / 7);
 }
 
 .square.active{
