--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+/* COMMON */
+.hidden{
+    display: none!important;
+}
+
+
 /* CONTAINER */
 .container{
     width: 80%;
@@ -50,6 +56,7 @@ select{
 .grid{
     width: 550px;
     height: 550px;
+    background-color: #fff;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
